# katakamuna-lang

./: .gitignore  LICENSE  PROOF.md  PROOF_BRAINFUCK.md  README.md  SPEC.md  katakamuna.py  pyproject.toml
.github/workflows/: proof.yml  publish.yml  turing-complete-proof.yml
docs/: utahi_01_visualizer.html
examples/: bf_copy.ktkm  bf_hello_digit.ktkm  bf_multiply.ktkm  branch.ktkm  counter.ktkm  dakuon_demo.ktkm  fibonacci.ktkm  happy_world.ktkm  hello.ktkm  hello_world.ktkm  minsky_add.ktkm  minsky_multiply.ktkm  minsky_proof.ktkm  resonance.ktkm  state_machine.ktkm  utahi_01.ktkm  うた.ktkm
tests/: test_all_phonemes.py
tools/: bf2ktkm.py
