[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katakamuna-lang"
version = "2.0.0"
description = "Katakamuna Lang — a Turing-complete esoteric programming language based on the 73 phonemes of the ancient Japanese Katakamuna script"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["esolang", "esoteric", "turing-complete", "katakamuna", "katakana", "programming-language"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/asahi-inoue-jp-shaman-ai-engineer/katakamuna-lang"
Repository = "https://github.com/asahi-inoue-jp-shaman-ai-engineer/katakamuna-lang"
"Bug Tracker" = "https://github.com/asahi-inoue-jp-shaman-ai-engineer/katakamuna-lang/issues"

[project.scripts]
katakamuna = "katakamuna:main"

[tool.setuptools]
py-modules = ["katakamuna"]
